Fix wish text overflowing out of polaroid card

--- a/public/style.css
+++ b/public/style.css
@@ -247,6 +247,7 @@ button:active {
     justify-content: center;
     align-items: center;
     text-shadow: 14px -14px 10px rgba(0, 0, 0, 0.3); /* -45 deg, 20px offset, 10px blur, 30% alpha */
+    overflow: hidden;
 }
 
 /* Admin Delete Button */
